--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,7 +12,7 @@ description: Mobile commerce app by Flutter
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.0.10+100
+version: 1.0.11+100
 
 environment:
   sdk: ">=2.16.0 <=3.0.0"
@@ -65,7 +65,7 @@ dependencies:
   webview_flutter: 3.0.4
   webview_flutter_web: 0.1.0+3
   responsive_builder: 0.4.2
-  flutter_inappwebview: 5.4.3+7
+  flutter_inappwebview: 5.8.0
 
   # HTML render
   flutter_widget_from_html_core: 0.8.5+3
