--- a/lib/config/config_es.json
+++ b/lib/config/config_es.json
@@ -64,12 +64,7 @@
       "items": [
         {
           "category": 233,
-          "image": "https://www.yarinohanzo.com/skin/bcse_mobility/images/YARI-IT-COM.jpg",
-          "padding": 15.0
-        },
-        {
-          "category": 14,
-          "image": "https://www.yarinohanzo.com/skin/bcse_mobility/images/gino.jfif",
+          "image": "https://yarinohanzo.com/modules/tvcmsslider/views/img/346ce23c103f83b248fd_bannercustom.png",
           "padding": 15.0
         }
       ]
